Fix Issue #10: Very long guest names cause column misalignment
1. Render an ellipsis "..." to represent clipped long VM name.
2. Remove class="alert" which is never used.

Tested in: IE9, IE10, Firefox 17.0.1, Chrome, Safari.

--- a/ui/css/theme-default/list.css
+++ b/ui/css/theme-default/list.css
@@ -136,12 +136,10 @@
 	height: 25px;
 	line-height: 25px;
 	text-shadow: -1px -1px 1px #ccc, 1px 1px 1px #fff;
-}
-
-.guest-general .title .alert {
-	font-weight: bold;
-	color: #f10d4d;
-	font-size: 28px;
+	max-width: 237px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .guest-general .text {
